# libfmplug

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: FindFMProSDK.cmake
data/: basic_popen.fp7
fmpro_sdk/: current
fmpro_sdk/2014-02-11/Headers/FMWrapper/: FMXBinaryData.h  FMXCalcEngine.h  FMXClient.h  FMXData.h  FMXDateTime.h  FMXExtern.h  FMXFixPt.h  FMXText.h  FMXTextStyle.h  FMXTypes.h
include/fmplug/: Error.h  Export.h  Function.h  Plugin.h  Setup.h  TypeMaps.h  UtfConv.h  Utils.h
include/fmutils/: Export.h  Popen.h
include/fmwrap/: Mock.h
samples/: basic.cpp
src/: CMakeLists.txt
src/fmwrap/: CMakeLists.txt  fmwrap.cpp
src/libfmplug/: CMakeLists.txt  Error.cpp  Function.cpp  Plugin.cpp  UtfConv.cpp  Utils.cpp  pch.cpp  pch.h
src/libfmutils/: CMakeLists.txt  Popen.cpp
src/samples/: CMakeLists.txt
src/samples/basic/: CMakeLists.txt  main.cpp  pch.h
src/samples/popen/: CMakeLists.txt  main.cpp  pch.cpp
src/tests/: CMakeLists.txt
src/tests/func_def/: CMakeLists.txt  main.cpp
tests/: main.cpp  plugin_test.cpp
tools/: start_fmpro.py
