SET(TEST_NAME func_def)
SET(APP_NAME test_${TEST_NAME})

FIND_PACKAGE(FMProSDK REQUIRED)
INCLUDE_DIRECTORIES(${FMPROSDK_INCLUDE_DIRS})

SET(APP_SRC
	main.cpp
)


ADD_DEFINITIONS(-Dlibfmplug_STATIC)

ADD_EXECUTABLE (${APP_NAME}
	${APP_SRC}
)

SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")

TARGET_LINK_LIBRARIES (${APP_NAME} libfmplug
) 

SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES PROJECT_LABEL "test - ${TEST_NAME}")
